# z3dk

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  HANDOFF_PHASE2.md  LICENSE  PHASE2_WALKTHROUGH.md  PROJECT.toml  README.md  run_tests.sh  test_hook_minimal.asm
.agent/workflows/: z3dk-dev.md
docs/: HANDOFF_FIXING_HOOK.md  Z3DK_HOOKS.md  Z3DK_MANIFESTO.md
docs/legacy/: README.md
docs/newbook/src/: SUMMARY.md  intro.md  legacy-asar.md  z3asm-compat.md  z3asm-differences.md  z3asm.md
docs/reference/: 65816_opcodes.json  snes_quirks.json  snes_registers.json
extensions/vscode-z3dk/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
extensions/vscode-z3dk/scripts/: install-vsix.sh  package-vsix.sh
extensions/vscode-z3dk/snippets/: asar.json
extensions/vscode-z3dk/syntax/: asar.tmLanguage.json
scripts/: expr.py  extract_reference_jsons.py  gen_hw_tables.py  generate_annotations.py  generate_label_indexes.py  generate_watch.py  oracle_analyzer.py  oracle_analyzer_ci_delta.py  oracle_analyzer_delta.py  oracle_validate.py  scaffold.py  static_analyzer.py  update_c_bind.py  z3asset.py
src/: CMakeLists.txt
src/bindings/c/: asardll.c  asardll.h
src/bindings/c_sharp/: asar.cs
src/stdlib/alttp/: all.asm  ram.asm  rom.asm
src/tests/: CMakeLists.txt
src/tests/interface-tests/: main.py
src/z3asm/: CMakeLists.txt  assembleblock.cpp  assembleblock.h  errors.h  interface-lib.cpp  interface-lib.h  libstr.cpp  macro.cpp  main.cpp  z3asm_main.cc  zAsar.cc  zAsar.h  zAsar_server.cc
src/z3asm/proto/: zAsar.proto
src/z3disasm/: CMakeLists.txt  README.md  formatter.cc  formatter.h  hooks.cc  hooks.h  main.cc  options.cc  options.h  symbols.cc  symbols.h  utils.cc  utils.h
src/z3dk_core/: CMakeLists.txt  assembler.cc  assembler.h  config.cc  config.h  emit.cc  emit.h  lint.cc  lint.h  opcode_descriptions.h  opcode_table.cc  opcode_table.h  snes_data.generated.h  snes_diagnostics.cc  snes_diagnostics.h  snes_knowledge_base.cc  snes_knowledge_base.h
src/z3lsp/: CMakeLists.txt  README.md  knowledge.cc  knowledge.h  logging.cc  logging.h  lsp_transport.cc  lsp_transport.h  main.cc  mesen_client.cc  mesen_client.h  parser.cc  parser.h  project_graph.cc  project_graph.h  state.cc  state.h  utils.cc  utils.h
templates/: hook.asm.tmpl  npc.asm.tmpl  routine.asm.tmpl  sprite.asm.tmpl
tests/: read.asm  segments.asm  test_mx_flag_analysis.py  z3dk_alttp_features.asm
tests/asar_compat/: README.md  test_asar_syntax.py
tests/asar_compat/snippets/: defines.asm  dw_dl.asm  incsrc_inc.asm  incsrc_main.asm  labels.asm  math.asm  org_db.asm  pad.asm
tests/asar_cpp/: CMakeLists.txt  test.cpp
tests/scripts/: run_tests.sh
tests/z3dk/: test_emit_outputs.py  test_label_structs.py  test_mx_flag_analysis.py  test_scaffold.py  test_z3lsp_rules.py  z3dk_alttp_features.asm
tests/z3lsp/: CMakeLists.txt  annotation_bug_test.cc  diagnostics_bug_test.cc  disasm_indexed.asm  inject_basic.asm  inject_define.asm  inject_redef.asm  knowledge_test.cc  std_defines.txt  std_test.asm  utils_test.cc
